# bgr

./: .gitignore  AGENTS.md  CURSOR_REMOTE_SRUN_MANUAL_GENERIC.md  LICENSE  README.md  pyproject.toml  remote_srun.sh  spec.md  submission_manifest.json
configs/: estimator_bgr.yaml  estimator_bgr_full.yaml  estimator_pair_15seed.yaml  estimator_pair_30seed.yaml  frozenlake_recovery_30seed.yaml  frozenlake_recovery_focused_30seed.yaml  grid_bgr.yaml  grid_bgr_full.yaml  grid_margin_ablation.yaml  grid_margin_ablation_15seed.yaml  grid_margin_ablation_30seed.yaml  grid_margin_ablation_replication_30seed.yaml  grid_margin_bgr.yaml  grid_margin_bgr_full.yaml  grid_margin_full_15seed.yaml  grid_margin_full_30seed.yaml  grid_margin_full_replication_30seed.yaml  grid_margin_learning_rate_sensitivity_15seed.yaml  grid_margin_learning_rate_sensitivity_30seed.yaml  grid_margin_pair_15seed.yaml  grid_margin_regime_sensitivity_15seed.yaml  grid_margin_regime_sensitivity_30seed.yaml  grid_margin_stress_sensitivity_15seed.yaml  grid_margin_stress_sensitivity_30seed.yaml  grid_margin_target_sensitivity_15seed.yaml  grid_margin_target_sensitivity_30seed.yaml  grid_policy_coverage.yaml  grid_policy_hard.yaml  grid_policy_hard_fast.yaml  grid_policy_mixed.yaml  suffix_bgr.yaml  suffix_bgr_full.yaml  suffix_coverage_full_30seed.yaml  suffix_coverage_full_replication_30seed.yaml  suffix_full_15seed.yaml  suffix_strategy.yaml  suffix_strategy_ablation_30seed.yaml  suffix_strategy_coverage_15seed.yaml  suffix_strategy_coverage_30seed.yaml  suffix_strategy_coverage_replication_30seed.yaml  (+8 more)
(+880 files in other folders)
