[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bgr-aaai"
version = "0.1.0"
description = "Boundary-Guided Replay experiments for AAAI-27"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "matplotlib>=3.7",
  "numpy>=1.23",
  "pillow>=9.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
